// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template: Home renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HomePage
    data={
      Object {
        "articles": Object {
          "edges": Array [
            Object {
              "node": Object {
                "frontmatter": Object {
                  "path": "/test",
                  "tags": "one, two",
                  "title": "Test",
                },
                "timeToRead": 1,
              },
            },
          ],
        },
        "content": Object {
          "frontmatter": Object {
            "description": "Test",
            "title": "Test",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    preview={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SEOTagsComponent
          description="Test"
          path="/"
          title="Test"
        />,
        <Script
          attributes={Object {}}
          onCreate={[Function]}
          onError={[Function]}
          onLoad={[Function]}
          url="https://identity.netlify.com/v1/netlify-identity-widget.js"
        />,
        <section
          className="home"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Test</p>",
              }
            }
          />
        </section>,
        <section
          className="articleList"
        >
          <p>
            I (sometimes) write articles:
          </p>
          <div>
            <a
              href="/test/"
            >
              <h3>
                Test
              </h3>
              <h4>
                Reading time: 
                1
                 minutes
              </h4>
              <TagListComponent
                tags="one, two"
              />
            </a>
          </div>
        </section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Test",
          "path": "/",
          "title": "Test",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "attributes": Object {},
          "onCreate": [Function],
          "onError": [Function],
          "onLoad": [Function],
          "url": "https://identity.netlify.com/v1/netlify-identity-widget.js",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Test</p>",
              }
            }
          />,
          "className": "home",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "<p>Test</p>",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              I (sometimes) write articles:
            </p>,
            <div>
              <a
                href="/test/"
              >
                <h3>
                  Test
                </h3>
                <h4>
                  Reading time: 
                  1
                   minutes
                </h4>
                <TagListComponent
                  tags="one, two"
                />
              </a>
            </div>,
          ],
          "className": "articleList",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "I (sometimes) write articles:",
            },
            "ref": null,
            "rendered": "I (sometimes) write articles:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/test/"
                >
                  <h3>
                    Test
                  </h3>
                  <h4>
                    Reading time: 
                    1
                     minutes
                  </h4>
                  <TagListComponent
                    tags="one, two"
                  />
                </a>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "/test",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h3>
                      Test
                    </h3>,
                    <h4>
                      Reading time: 
                      1
                       minutes
                    </h4>,
                    <TagListComponent
                      tags="one, two"
                    />,
                  ],
                  "href": "/test/",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Test",
                    },
                    "ref": null,
                    "rendered": "Test",
                    "type": "h3",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Reading time: ",
                        1,
                        " minutes",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "Reading time: ",
                      1,
                      " minutes",
                    ],
                    "type": "h4",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "tags": "one, two",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SEOTagsComponent
            description="Test"
            path="/"
            title="Test"
          />,
          <Script
            attributes={Object {}}
            onCreate={[Function]}
            onError={[Function]}
            onLoad={[Function]}
            url="https://identity.netlify.com/v1/netlify-identity-widget.js"
          />,
          <section
            className="home"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />
          </section>,
          <section
            className="articleList"
          >
            <p>
              I (sometimes) write articles:
            </p>
            <div>
              <a
                href="/test/"
              >
                <h3>
                  Test
                </h3>
                <h4>
                  Reading time: 
                  1
                   minutes
                </h4>
                <TagListComponent
                  tags="one, two"
                />
              </a>
            </div>
          </section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Test",
            "path": "/",
            "title": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "attributes": Object {},
            "onCreate": [Function],
            "onError": [Function],
            "onLoad": [Function],
            "url": "https://identity.netlify.com/v1/netlify-identity-widget.js",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />,
            "className": "home",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": "<p>Test</p>",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                I (sometimes) write articles:
              </p>,
              <div>
                <a
                  href="/test/"
                >
                  <h3>
                    Test
                  </h3>
                  <h4>
                    Reading time: 
                    1
                     minutes
                  </h4>
                  <TagListComponent
                    tags="one, two"
                  />
                </a>
              </div>,
            ],
            "className": "articleList",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "I (sometimes) write articles:",
              },
              "ref": null,
              "rendered": "I (sometimes) write articles:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/test/"
                  >
                    <h3>
                      Test
                    </h3>
                    <h4>
                      Reading time: 
                      1
                       minutes
                    </h4>
                    <TagListComponent
                      tags="one, two"
                    />
                  </a>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "/test",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h3>
                        Test
                      </h3>,
                      <h4>
                        Reading time: 
                        1
                         minutes
                      </h4>,
                      <TagListComponent
                        tags="one, two"
                      />,
                    ],
                    "href": "/test/",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Test",
                      },
                      "ref": null,
                      "rendered": "Test",
                      "type": "h3",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "Reading time: ",
                          1,
                          " minutes",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "Reading time: ",
                        1,
                        " minutes",
                      ],
                      "type": "h4",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "tags": "one, two",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Template: Home renders preview 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HomePage
    data={
      Object {
        "articles": Object {
          "edges": Array [
            Object {
              "node": Object {
                "frontmatter": Object {
                  "path": "/test",
                  "tags": "one, two",
                  "title": "Test",
                },
                "timeToRead": 1,
              },
            },
          ],
        },
        "content": Object {
          "frontmatter": Object {
            "description": "Test",
            "title": "Test",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    preview={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SEOTagsComponent
          description="Test"
          path="/"
          title="Test"
        />,
        <Script
          attributes={Object {}}
          onCreate={[Function]}
          onError={[Function]}
          onLoad={[Function]}
          url="https://identity.netlify.com/v1/netlify-identity-widget.js"
        />,
        <section
          className="home"
        >
          <div>
            &lt;p&gt;Test&lt;/p&gt;
          </div>
        </section>,
        <section
          className="articleList"
        >
          <p>
            I (sometimes) write articles:
          </p>
          <div>
            <a
              href="/test/"
            >
              <h3>
                Test
              </h3>
              <h4>
                Reading time: 
                1
                 minutes
              </h4>
              <TagListComponent
                tags="one, two"
              />
            </a>
          </div>
        </section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Test",
          "path": "/",
          "title": "Test",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "attributes": Object {},
          "onCreate": [Function],
          "onError": [Function],
          "onLoad": [Function],
          "url": "https://identity.netlify.com/v1/netlify-identity-widget.js",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            &lt;p&gt;Test&lt;/p&gt;
          </div>,
          "className": "home",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "<p>Test</p>",
          },
          "ref": null,
          "rendered": "<p>Test</p>",
          "type": "div",
        },
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              I (sometimes) write articles:
            </p>,
            <div>
              <a
                href="/test/"
              >
                <h3>
                  Test
                </h3>
                <h4>
                  Reading time: 
                  1
                   minutes
                </h4>
                <TagListComponent
                  tags="one, two"
                />
              </a>
            </div>,
          ],
          "className": "articleList",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "I (sometimes) write articles:",
            },
            "ref": null,
            "rendered": "I (sometimes) write articles:",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/test/"
                >
                  <h3>
                    Test
                  </h3>
                  <h4>
                    Reading time: 
                    1
                     minutes
                  </h4>
                  <TagListComponent
                    tags="one, two"
                  />
                </a>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "/test",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h3>
                      Test
                    </h3>,
                    <h4>
                      Reading time: 
                      1
                       minutes
                    </h4>,
                    <TagListComponent
                      tags="one, two"
                    />,
                  ],
                  "href": "/test/",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Test",
                    },
                    "ref": null,
                    "rendered": "Test",
                    "type": "h3",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Reading time: ",
                        1,
                        " minutes",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "Reading time: ",
                      1,
                      " minutes",
                    ],
                    "type": "h4",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "tags": "one, two",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SEOTagsComponent
            description="Test"
            path="/"
            title="Test"
          />,
          <Script
            attributes={Object {}}
            onCreate={[Function]}
            onError={[Function]}
            onLoad={[Function]}
            url="https://identity.netlify.com/v1/netlify-identity-widget.js"
          />,
          <section
            className="home"
          >
            <div>
              &lt;p&gt;Test&lt;/p&gt;
            </div>
          </section>,
          <section
            className="articleList"
          >
            <p>
              I (sometimes) write articles:
            </p>
            <div>
              <a
                href="/test/"
              >
                <h3>
                  Test
                </h3>
                <h4>
                  Reading time: 
                  1
                   minutes
                </h4>
                <TagListComponent
                  tags="one, two"
                />
              </a>
            </div>
          </section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Test",
            "path": "/",
            "title": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "attributes": Object {},
            "onCreate": [Function],
            "onError": [Function],
            "onLoad": [Function],
            "url": "https://identity.netlify.com/v1/netlify-identity-widget.js",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              &lt;p&gt;Test&lt;/p&gt;
            </div>,
            "className": "home",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "<p>Test</p>",
            },
            "ref": null,
            "rendered": "<p>Test</p>",
            "type": "div",
          },
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                I (sometimes) write articles:
              </p>,
              <div>
                <a
                  href="/test/"
                >
                  <h3>
                    Test
                  </h3>
                  <h4>
                    Reading time: 
                    1
                     minutes
                  </h4>
                  <TagListComponent
                    tags="one, two"
                  />
                </a>
              </div>,
            ],
            "className": "articleList",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "I (sometimes) write articles:",
              },
              "ref": null,
              "rendered": "I (sometimes) write articles:",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/test/"
                  >
                    <h3>
                      Test
                    </h3>
                    <h4>
                      Reading time: 
                      1
                       minutes
                    </h4>
                    <TagListComponent
                      tags="one, two"
                    />
                  </a>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "/test",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h3>
                        Test
                      </h3>,
                      <h4>
                        Reading time: 
                        1
                         minutes
                      </h4>,
                      <TagListComponent
                        tags="one, two"
                      />,
                    ],
                    "href": "/test/",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Test",
                      },
                      "ref": null,
                      "rendered": "Test",
                      "type": "h3",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          "Reading time: ",
                          1,
                          " minutes",
                        ],
                      },
                      "ref": null,
                      "rendered": Array [
                        "Reading time: ",
                        1,
                        " minutes",
                      ],
                      "type": "h4",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "tags": "one, two",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
